--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,18 +7,42 @@ version: 1.0.0+1
 environment:
   sdk: ^3.5.0
 
+#--------------- PACKAGES ------------------#
 dependencies:
   flutter:
     sdk: flutter
 
+  # Utility Packages
+  http: ^1.1.0
+  intl: ^0.18.1
+  logger: ^2.0.1
+  url_launcher: ^6.1.12
+  flutter_native_splash: ^2.3.1
+  smooth_page_indicator: ^1.1.0
+
+  # Icons
   iconsax: ^0.0.8
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
+
+  # State Management
   get: ^4.6.5
+  get_storage: ^2.1.1
+
+  # Product Specific
+  readmore: ^2.2.0
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
+  capped_progress_indicator: ^0.0.2
+
+
+
+  #--------------- ./ PACKAGES END ------------------#
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
