Search and home category

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
     - assets/icons/brands/
     - assets/images/on_boarding_images/
     - assets/images/animations/
+    - assets/icons/categories/
+
 
   fonts:
     - family: Poppins
